--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blurred Cards - @programmer.cs</title>
+    <title>Blurred Cards</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -18,8 +18,8 @@
                     style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqQb1P6N6snxSLwrJZQV8lyEXupqQirXOQTjqsiar-Y3ljvCAz6QAEx8Ql&s=10)">
                 </div>
                 <div class="card__element--content">
-                    <p class="card__element--text-category">Landscape</p>
-                    <h3 class="card__element--text-title">Beach</h3>
+                    <p class="card__element--text-category">RadhaKrishna</p>
+                    <h3 class="card__element--text-title">Enjoying</h3>
                 </div>
             </a>
             <a class="card__element" href="#">
@@ -27,8 +27,8 @@
                     style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRw3BMmmrrjqoop9Oelxf-qOYxqwSGgLJ2Row&usqp=CAU)">
                 </div>
                 <div class="card__element--content">
-                    <p class="card__element--text-category">Landscape</p>
-                    <h3 class="card__element--text-title">Desert</h3>
+                    <p class="card__element--text-category">Sri Krishna</p>
+                    <h3 class="card__element--text-title">Hiding</h3>
                 </div>
             </a>
             <a class="card__element" href="#">
@@ -36,8 +36,8 @@
                     style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZ1B4FhBmPwrU6NAcQvlqfrYLmDec18gdJqA&usqp=CAU)">
                 </div>
                 <div class="card__element--content">
-                    <p class="card__element--text-category">Landscape</p>
-                    <h3 class="card__element--text-title">Green Field</h3>
+                    <p class="card__element--text-category">Little Krishna</p>
+                    <h3 class="card__element--text-title">Happiness</h3>
                 </div>
             </a>
             <a class="card__element" href="#">
@@ -45,13 +45,12 @@
                     style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-2EBiXS4Cfr-4mCrJPKreGOc9h2MzRcUAqJYra6EfLHNIwU7vRIRwunw&s=10)">
                 </div>
                 <div class="card__element--content">
-                    <p class="card__element--text-category">Landscape</p>
-                    <h3 class="card__element--text-title">Snowy Mountains</h3>
+                    <p class="card__element--text-category">RadhaKrishna</p>
+                    <h4 class="card__element--text-title">Peaceful</h4>
                 </div>
             </a>
             <div>
     </section>
 </body>
 
-            </html>
-              
+</html>
