--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a class="card__element" href="#">
                 <!-- Using background-image directly in the CSS is a good practice -->
                 <div class="card__element--background"
-                    style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqQb1P6N6snxSLwrJZQV8lyEXupqQirXOQTjqsiar-Y3ljvCAz6QAEx8Ql&s=10)">
+                    style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuA2m_Dkct0yZMtgwcE8_R6Z-VS0pfz0Yc3A&usqp=CAU)">
                 </div>
                 <div class="card__element--content">
                     <p class="card__element--text-category">RadhaKrishna</p>
@@ -42,7 +42,7 @@
             </a>
             <a class="card__element" href="#">
                 <div class="card__element--background"
-                    style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-2EBiXS4Cfr-4mCrJPKreGOc9h2MzRcUAqJYra6EfLHNIwU7vRIRwunw&s=10)">
+                    style="background-image: url(https://m.media-amazon.com/images/I/618-Aw282GL._AC_UF1000,1000_QL80_.jpg)">
                 </div>
                 <div class="card__element--content">
                     <p class="card__element--text-category">RadhaKrishna</p>
